# sport_nutrition

./: .gitignore  README.md  pyproject.toml
src/apps/shop/: admin.py  models.py  urls.py  views.py
src/apps/shop/fixtures/: delivery_point.json  feedback.json  order.json  product.json
src/apps/shop/migrations/: 0001_initial.py  0002_alter_deliverypoint_table.py  0002_customer_cart.py  0003_rename_product_cart_products.py
src/apps/shop/static/css/: style.css
src/apps/shop/templates/shop/: base.html  certain_product.html  products.html
src/config/: settings.py  urls.py
