[tool.poetry]
name = "sport-nutrition"
version = "0.1.0"
description = ""
authors = ["Egor <wzxv_@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"


[tool.poetry.group.dev.dependencies]
django-types = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
