[tool.poetry]
name = "sport-nutrition"
version = "0.1.0"
description = ""
authors = ["Egor <wzxv_@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
pillow = "^10.0.0"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
django-types = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
